--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script type="module" src="/script.js" defer></script>
+    <script type="module" src="/main.js" defer></script>
   </head>
   <body>
     <h1>Prototype Starter</h1>
