Initial test of hareactive

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
   </head>
   <body>
     <h1>Prototype Starter</h1>
+    <canvas></canvas>
   </body>
   <style>
     html {
       font-family: sans-serif;
+    }
+    canvas {
+      width: 400px;
+      height: 400px;
+      border: solid black 1px;
     }
   </style>
 </html>
