--- a/index.html
+++ b/index.html
@@ -10,15 +10,25 @@
   <body>
     <h1>Prototype Starter</h1>
     <canvas></canvas>
+    <div id="box"></div>
   </body>
   <style>
     html {
       font-family: sans-serif;
+      background-color: #eee;
     }
     canvas {
       width: 400px;
       height: 400px;
-      border: solid black 1px;
+    }
+    #box {
+      position: fixed;
+      top: -10px;
+      left: -10px;
+      width: 10px;
+      height: 10px;
+
+      background-color: blue;
     }
   </style>
 </html>
