--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="/main.js" defer></script>
   </head>
   <body>
-    <h1>Prototype Starter</h1>
+    <main id="main"></main>
   </body>
   <style>
     html {
